# Backend/PubNet.API.DTO/Packages/Nuget/NugetSuccessDto.cs
@@ -1,0 +1,6 @@
+﻿namespace PubNet.API.DTO.Packages.Nuget;
+
+public class NugetSuccessDto
+{
+	public required string Success { get; init; }
+}
